# 1st

./: .dockerignore  .env.example  .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  README.md  SECURITY.md  default.nix  docker-compose.yml
.config/: conduit.xtask.yml  default.config.toml
.docker/: builder.dockerfile  nix.dockerfile
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: clippy.yml  docker.yml  rust.yml
app/: Cargo.toml
app/src/: context.rs  main.rs  settings.rs  states.rs
app/src/api/routes/: index.rs  mod.rs
app/src/cli/: commands.rs  mod.rs
app/src/cli/args/: mod.rs  services.rs  system.rs
app/src/services/: mod.rs  telegram.rs
app/src/services/openai/: chatgpt.rs  mod.rs  service.rs
app/src/services/telegram/: bot.rs  commands.rs  mod.rs  settings.rs
app/src/telegram/: bot.rs  commands.rs  settings.rs
scripts/: setup.sh
tldr/: Cargo.toml
tldr/src/: main.rs  settings.rs
tldr/src/api/: mod.rs
tldr/src/cli/: commands.rs  mod.rs
tldr/src/cli/args/: mod.rs  services.rs
tldr/src/services/: mod.rs  oai.rs  telegram.rs
xtask/: Cargo.toml
xtask/src/: lib.rs
xtask/src/cli/: commands.rs  mod.rs
xtask/src/cli/args/: builder.rs  mod.rs  setup.rs
