[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
edition = "2021"
homepage = "https://github.com/FL03/tldr/wiki"
license = "Apache-2.0"
repository = "https://github.com/FL03/tldr"
version = "0.1.0" # TODO: Update the package version

[workspace.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[workspace]
default-members = [
    "tldr"
]
exclude = [
    "xtask"
]
members = [
    "tldr",
]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "unwind"
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
panic = "unwind"
rpath = false
opt-level = "z"
overflow-checks = false