[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "pzzld-bot helps users by quickly summarizing content leveraging intelligent systems and diverse data-sources"
edition = "2021"
homepage = "https://github.com/FL03/pzzld-bot/wiki"
keywords = []
license = "Apache-2.0"
name = "pzzld-bot"
repository = "https://github.com/FL03/pzzld-bot"
version = "0.1.0"

[[bin]]
bench = false
name = "pzzldbot"
path = "src/main.rs"
test = false

[build-dependencies]

[dev-dependencies]

[dependencies]
# Custom libraries
acme = { default-features = false, features = ["core"], git = "https://github.com/FL03/acme", branch = "v0.2.4", version = "0.2.4" }
scsys = { features = [], version = "0.1.38" }

# App
anyhow = "1.0.68"
async-trait = "0.1.60"
axum-core = "0.3.0"
clap = { features = ["cargo", "derive", "env"], version = "4.0.32" }
http = "0.2.8"
hyper = { features = ["full"], version = "0.14.23" }
tokio = { features = ["full"], version = "1.23.0" }
tower = "0.4.13"
tower-http = { features = [], version = "0.3.5" }
tracing = "0.1.37"
tracing-subscriber = { features = ["env-filter"], version = "0.3.16" }

# Misc
futures = "0.3.25"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24.1" }

# Services
async-openai = "0.4.0"
teloxide = { features = ["macros", "trace-adaptor", "webhooks-axum"], version = "0.11.3" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
