[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "tldr is a telegram bot for quickly summarizing any given topic"
edition = "2021"
homepage = "https://github.com/FL03/tldr/wiki"
keywords = []
license = "Apache-2.0"
name = "tldr"
repository = "https://github.com/FL03/tldr"
version = "0.1.0"

[features]

test_env = []

[[bin]]
bench = false
name = "tldr"
path = "src/main.rs"
test = true

[build-dependencies]

[dev-dependencies]

[dependencies]
acme = { features = [], git = "https://github.com/FL03/acme", branch = "v0.2.4", version = "0.2.4" }
async-openai = "0.2.0"
axum = { features = ["headers", "http2", "macros"], version = "0.6.1" }
clap = { features = ["cargo", "derive", "env"], version = "4.0.32" }
futures = "0.3.25"
http = "0.2.8"
hyper = { features = ["full"], version = "0.14.23" }
scsys = { features = ["full"], version = "0.1.38" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24.1" }
teloxide = { features = ["full"], version = "0.11.3" }
tokio = { features = ["full"], version = "1.23.0" }
tower = "0.4.13"
tower-http = { features = ["full"], version = "0.3.5" }
tracing = "0.1.37"
tracing-subscriber = { features = ["env-filter"], version = "0.3.16" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
