[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)", "Scattered-Systems (https://github.com/scattered-systems)"]
categories = []
description = "xtask"
edition = "2021"
homepage = "https://github.com/FL03/conduit/wiki"
keywords = [ "scsys" ]
license = "Apache-2.0"
name = "conduit-xtask"
repository = "https://github.com/FL03/conduit"
version = "0.1.0" # TODO: Update the package version

[lib]
crate-type = ["cdylib", "rlib"]
name = "xtask"
path = "src/lib.rs"
test = true

[build-dependencies]

[dependencies]
anyhow = "1.0.66"
clap = { features = ["cargo", "derive", "env"], version = "4.0.29" }
config = "0.13.3"
devx-cmd = "0.5.0"
devx-pre-commit = "0.5.0" 
duct = "0.13.6"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]